<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create_note.CreateNoteFragment">

    <TextView
        android:id="@+id/textViewToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/create_new_task"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNotesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:elevation="2dp"
        android:gravity="start"
        android:hint="@string/enter_notes_title"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewToolbar" />


    <EditText
        android:id="@+id/editTextNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:elevation="2dp"
        android:gravity="start"
        android:hint="@string/enter_note_text"
        android:lines="10"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNotesTitle" />


    <TextView
        android:id="@+id/textViewChooseDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_edittext"
        android:drawableEnd="@drawable/ic_date"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="Choose date"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNotes" />

    <Button
        android:id="@+id/buttonSaveNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/set_reminder"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>