<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutDeleteItem"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorTransparent">

    <ImageView
        android:id="@+id/imageViewDelete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_delete"
        android:padding="10dp"
        android:tint="@android:color/white"
        android:background="@android:color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>