...
        android:gravity="center"
        android:text="@string/title_task"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReminders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/title_task"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewToolbar"
        tools:listitem="@layout/item_reminder" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
...
